<resources>
    <string name="app_name">Android_HomeWork</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_will_rock_you_com">WeWillRockYou.com</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="registration_text_view">Registration</string>
    <string name="signup">SignUp</string>
    <string name="e_mail">e-mail</string>
    <string name="first_name">first name</string>
    <string name="password_registration">password</string>
    <string name="nested_fragment">NESTED FRAGMENT</string>
    <string name="back_to_login">Back to Login</string>
    <string name="main_screen">MAIN SCREEN</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="details_title">TITLE</string>
    <string name="details_description">DESCRIPTION</string>
    <string name="details_time">TIME</string>

    <string name="error_field_username">field username can\'t be empty</string>
    <string name="error_field_password">field password can\'t be empty</string>
    <string name="error_field_email">field e-mail can\'t be empty</string>
    <string name="error_field_firstname">field first name can\'t be empty</string>

    <string name="congratulations">Congratulations!</string>
    <string name="ok">OK</string>
    <string name="calle_ok">called OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome to WeWillRockYou.com\nWe are glad to see you with us</string>
    <string name="logout">Logout</string>
    <string name="seen_screen">Sorry, but you\'ve already seen this screen</string>
    <string name="name">Name</string>
    <string name="username_items">Username</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="geo">Geo</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="company">Company</string>
    <string name="e_mail_items">E-mail</string>
    <string name="catchphrase">catchPhrase</string>
    <string name="business">Business</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="items_fragment">Items Fragment</string>
    <string name="registration_bottom_nav">Registration</string>
    <string name="favorites_bottom_nav">Favorites</string>
    <string name="recyclerview_bottom_nav">RecyclerView</string>

</resources>